--- a/index.html
+++ b/index.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head> 
+
+    <!-- Primary Meta Tags -->
+<title>Bionic Broncos - FRC 6686</title>
+<meta name="title" content="Bionic Broncos - FRC 6686" />
+<meta name="description" content="a passionate group of student innovators building competitive robots, advancing STEM education, and inspiring future engineers through teamwork, creativity, and impact in the FIRST Robotics Competition." />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://bionicbroncos.org/" />
+<meta property="og:title" content="Bionic Broncos - FRC 6686" />
+<meta property="og:description" content="a passionate group of student innovators building competitive robots, advancing STEM education, and inspiring future engineers through teamwork, creativity, and impact in the FIRST Robotics Competition." />
+<meta property="og:image" content="favicon.png" />
+
+<!-- X (Twitter) -->
+<meta property="twitter:card" content="favicon.png" />
+<meta property="twitter:url" content="https://metatags.io/" />
+<meta property="twitter:title" content="Bionic Broncos - FRC 6686" />
+<meta property="twitter:description" content="a passionate group of student innovators building competitive robots, advancing STEM education, and inspiring future engineers through teamwork, creativity, and impact in the FIRST Robotics Competition." />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+
+    
     <style> 
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
     body { 
